--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 /tests/tests/
 /tests/results/
 env_specific_config.php
+uploads/*
+!uploads/index.html
